[package]
authors = ["Noel Matero <noelbenjaminmatero@gmail.com>"]
name = "orangutan_macro"
version = "0.1.0"
edition = "2021"
description = "Flask-like super simple and lightweight web server framework for rust"
license = "MIT"
keywords = ["panther", "flask", "server", "web server", "http"]
repository = "https://github.com/NoelMatero/rFlask/"

[dependencies]
syn = { version = "2.0.65", features = ["full"] }
quote = "1.0"
lib_shared = { path = "./lib_shared" }
ctor = "0.2.8"

[lib]
proc-macro = true

