[package]
authors = ["Noel Matero <noelbenjaminmatero@gmail.com>"]
name = "lib_shared"
version = "0.1.0"
edition = "2021"
description = "Flask-like super simple and lightweight web server framework for rust"
license = "MIT"
keywords = ["orangutan", "flask", "server", "web server", "http"]
repository = "https://github.com/NoelMatero/orangutan"

[dependencies]
chrono = "0.4.38"
lazy_static = "1.4.0"
regex = "1.10.5"
serde = "1.0.203"
serde_json = "1.0.117"

